--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "Apache-2.0",
   "main": "src/scribe.js",
   "dependencies": {
-    "immutable": "~3.8.1"
+    "immutable": "~3.8.1",
+    "lodash-amd": "^4.17.11"
   },
   "devDependencies": {
     "chai": "~1.9.1",
@@ -28,5 +29,8 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/guardian/scribe.git"
+  },
+  "browserify": {
+    "transform": [["babelify", { "presets": ["@babel/preset-env"] }]]
   }
 }
